--- a/config.toml
+++ b/config.toml
@@ -195,18 +195,18 @@ defaultContentLanguageInSubdir = false
 #   The weight parameter defines the order that the links will appear in.
 
 [[menu.main]]
-  name = "Contact"
-  url = "#about"
-  weight = 1
-
-[[menu.main]]
   name = "Posts"
   url = "#posts"
-  weight = 2
+  weight = 1
 
 [[menu.main]]
   name = "Tags"
   url = "#tags"
+  weight = 2
+
+[[menu.main]]
+  name = "A propos"
+  url = "#about"
   weight = 3
 
 # Taxonomies.
